# pipol_tracker

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: pipol_tracker_config.cfg
config/: pipol_tracker_params.yaml
launch/: debugPTwithTLD.launch  gt_annotation.launch  pipol_tracker_REEM.launch  pipol_tracker_from_bag.launch  pipol_tracker_from_bag_2013.launch  pipol_tracker_from_bag_2014.launch  pipol_tracker_from_bag_2014_no_robot_env.launch  pipol_tracker_params.yaml  pipol_tracker_viz_2014.rviz  pipol_tracker_viz_2014_no_env.rviz  reemPT.launch  reemTest.launch
msg/: person.msg
pipol_tracker_lib/: CMakeLists.txt  Findpipol_tracker.cmake
pipol_tracker_lib/doc/: .gitignore
pipol_tracker_lib/lib/: .gitignore
pipol_tracker_lib/src/: .gitignore  CMakeLists.txt  line.cpp  peopleTracker.cpp  peopleTracker.h  personParticle.cpp  personParticle.h  personParticleFilter.cpp  personParticleFilter.h  personTarget.cpp  personTarget.h  point.cpp  point3d.cpp  point3dCov.h
pipol_tracker_lib/src/appearance/: appearance.cpp  appearance.h  colorBoxes.cpp  colorBoxes.h  combined1.cpp  combined1.h  covariancemodel.h  equalblockappearance.hpp  histogram.cpp  histogram.h  hogmodel.cpp  hsHistogram.h  normalizedpatchmodel.cpp  normalizedpatchmodel.h  oldam.h  rgbHistogram.cpp  rgbHistogram.h  simplepatchmodel.cpp
pipol_tracker_lib/src/appearance_old/: appearance.h  hsHistogram.cpp  hsHistogram.h  personAppearance.cpp  personAppearance.h
pipol_tracker_lib/src/appearance_oldam/: covariancemodel.cpp  hsHistogram.cpp  oldam.cpp
pipol_tracker_lib/src/examples/: CMakeLists.txt  appearance_metrics_test.cpp  appearance_test.cpp  people_tracking_rai_test.cpp
pipol_tracker_lib/src/geometry/: point3d.h  point3dCov.cpp
pipol_tracker_lib/src/observations/: basicObservation.cpp  faceObservation.cpp  odometryObservation.cpp  odometryObservation.h  point3dObservation.h
pipol_tracker_lib/src/random/: simpleRnd.cpp  simpleRnd.h
pipol_tracker_pkg/: CMakeLists.txt  package.xml
pipol_tracker_pkg/cfg/: pipol_tracker_config.cfg
pipol_tracker_pkg/launch/: debugPT.launch  debugPT.vcg  pipol_tracker_from_bag.launch  pipol_tracker_params.yaml  pipol_tracker_viz.rviz  reemPT.launch
pipol_tracker_pkg/msg/: DetectedPerson.msg  FaceDetection.msg  FaceDetections.msg  HeadPanTilt.msg  HogDetection.msg  HogDetections.msg  LegDetections.msg  Rectangle.msg  coloredBox.msg  person.msg  personArray.msg
pipol_tracker_pkg/src/: pipol_tracker_main.cpp  pipol_tracker_node.cpp  pipol_tracker_node.h
rviz/: gt_annotation.rviz  pipol_tracker_viz_2014.rviz
scilab/: mota_motp.sce  mota_motp_results.sce  munkres.sci  munkres_test.sce
src/: gt_annotation_imarkers.cpp  gt_annotation_main.cpp  pipol_tracker_main.cpp  pipol_tracker_node.cpp  pipol_tracker_node.h
src/pipol_tracker_lib/: CMakeLists.txt  association_nnls.cpp  association_nnls.h  association_node.cpp  association_node.h  association_solver.cpp  association_solver.h  association_tree.cpp  association_tree.h  matrix.h  matrixx.h  peopleTracker.cpp  peopleTracker.h  personParticle.cpp  personParticle.h  personParticleFilter.cpp  personParticleFilter.h  personTarget.cpp  personTarget.h  time_stamp.cpp  time_stamp.h
src/pipol_tracker_lib/appearance/: commonblockappearance.hpp  hogmodel.h  simplepatchmodel.h
src/pipol_tracker_lib/appearance_deprecated/: appearance.cpp  appearance_test.cpp  colorBoxes.cpp  colorBoxes.h  simplepatchmodel.cpp  simplepatchmodel.h
src/pipol_tracker_lib/detections/: detection_base.cpp  detection_base.h  detection_body3D.cpp  detection_body3D.h  detection_legs.cpp  detection_legs.h
src/pipol_tracker_lib/examples/: CMakeLists.txt  test_matrix.cpp  test_tree.cpp
src/pipol_tracker_lib/geometry/: line.h  point.h  point3d.cpp  point3d.h  point3dCov.h
src/pipol_tracker_lib/observations/: basicObservation.cpp  basicObservation.h  bodyObservation.cpp  bodyObservation.h  faceObservation.h  point3dObservation.cpp  timeStamp.cpp  timeStamp.h
