# create an example application
ADD_EXECUTABLE(people_tracking_rai_test people_tracking_rai_test.cpp)
ADD_EXECUTABLE(appearance_test appearance_test.cpp)
# ADD_EXECUTABLE(appearance_metrics_test appearance_metrics_test.cpp)
# link necessary libraries
TARGET_LINK_LIBRARIES(people_tracking_rai_test people_tracking_rai)
TARGET_LINK_LIBRARIES(appearance_test people_tracking_rai)
# TARGET_LINK_LIBRARIES(appearance_metrics_test people_tracking_rai)
